[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
combine = "4.6.6"
glam = "0.22.0"
grid = "0.9.0"
index_vec = "0.1.3"
itertools = "0.10.5"
maplit = "1.0.2"
num-modular = "0.5.1"
num-traits = "0.2.15"
pathfinding = "4.2.0"
pico-args = "0.5.0"
prettytable = "0.10.0"
rayon = "1.6.1"
smallvec = { version = "1.10.0", features = ["const_generics"] }
